scrollbars no longer show in the write post box

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
    
 }
 
-textarea {
+.write {
     border-radius: 25px;
     background-color: rgb(22, 21, 21);
     height: auto;
@@ -68,6 +68,7 @@ textarea {
     padding: 20px;
     outline: none;
     box-sizing: border-box;
+    overflow: hidden;
 
 }
 
